<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.AddActivity">

    <ImageView
        android:id="@+id/add_photo"
        android:layout_width="324dp"
        android:layout_height="221dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/add_story"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_a_photo_24" />

    <Button
        android:id="@+id/camera_button"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="44dp"
        android:text="@string/camera"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/add_photo"
        app:layout_constraintTop_toBottomOf="@+id/add_photo" />

    <Button
        android:id="@+id/gallery_button"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="44dp"
        android:text="@string/gallery"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/add_photo"
        app:layout_constraintTop_toBottomOf="@+id/add_photo" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:hint="@string/add_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_photo" />

    <Button
        android:id="@+id/upload_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/add_upload"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />

    <ProgressBar
        android:id="@+id/progressBar_add"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.563" />


</androidx.constraintlayout.widget.ConstraintLayout>