<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.DetailActivity">

    <ImageView
        android:id="@+id/detail_photo"
        android:layout_width="324dp"
        android:layout_height="221dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/avatar_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_name"
        android:textSize="25sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/detail_name"
        app:layout_constraintEnd_toEndOf="@+id/detail_name"
        app:layout_constraintStart_toStartOf="@+id/detail_name"
        tools:text="Name" />

    <TextView
        android:id="@+id/detail_name"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="@+id/detail_photo"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="@+id/detail_photo"
        app:layout_constraintTop_toBottomOf="@+id/detail_photo"
        tools:text="@string/detail_name" />

    <TextView
        android:id="@+id/textView_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_desc"
        android:textSize="25sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/detail_desc"
        app:layout_constraintEnd_toEndOf="@+id/detail_desc"
        app:layout_constraintStart_toStartOf="@+id/detail_desc"
        tools:text="Description" />

    <TextView
        android:id="@+id/detail_desc"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="@+id/detail_date"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/detail_date"
        app:layout_constraintTop_toBottomOf="@+id/detail_date"
        tools:text="@string/detail_desc" />

    <TextView
        android:id="@+id/textView_created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_created"
        android:textSize="25sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/detail_date"
        app:layout_constraintEnd_toEndOf="@+id/detail_date"
        app:layout_constraintStart_toStartOf="@+id/detail_date"
        tools:text="Created" />

    <TextView
        android:id="@+id/detail_date"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="@+id/detail_name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/detail_name"
        app:layout_constraintTop_toBottomOf="@+id/detail_name"
        tools:text="@string/detail_created" />


</androidx.constraintlayout.widget.ConstraintLayout>